WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204782
[LFC][IFC] TextUtil::width should not overflow when word-spacing is larger than LayoutUnit::max
https://bugs.webkit.org/show_bug.cgi?id=204782
Summary
[LFC][IFC] TextUtil::width should not overflow when word-spacing is larger th...
alan
Reported
2019-12-02 20:29:10 PST
ssia
Attachments
Patch
(3.79 KB, patch)
2019-12-02 20:34 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(3.81 KB, patch)
2019-12-02 20:36 PST
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-02 20:29:32 PST
<
rdar://problem/57580285
>
alan
Comment 2
2019-12-02 20:34:54 PST
Created
attachment 384684
[details]
Patch
alan
Comment 3
2019-12-02 20:36:16 PST
Created
attachment 384685
[details]
Patch
alan
Comment 4
2019-12-03 06:52:55 PST
Committed
r253039
: <
https://trac.webkit.org/changeset/253039
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug