[LFC][IFC] TextUtil::width should not overflow when word/letter-spacing is larger than LayoutUnit::max https://bugs.webkit.org/show_bug.cgi?id=204782 <rdar://problem/57580285>

Reviewed by Antti Koivisto.

LayoutUnit width = font.width(run) and width -= (font.spaceWidth() + font.wordSpacing()) could produce a negative width value.

* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::InlineItemRun::removeTrailingLetterSpacing):
* layout/inlineformatting/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::width):
(WebCore::Layout::TextUtil::fixedPitchWidth):

Canonical link: https://commits.webkit.org/218004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253039 268f45cc-cd09-0410-ab3c-d52691b4dbfc